# skip-vae-rl

./: .gitignore  README.md  pyproject.toml
configs/: debug_rl_raw.yaml  debug_rl_skip_vae.yaml  debug_vae.yaml  latent_carracing_skip_regularized.yaml  latent_carracing_vae.yaml  latent_doorkey_skip_regularized.yaml  latent_doorkey_vae.yaml  latent_skip_vae.yaml  latent_skip_vae_regularized.yaml  latent_vae.yaml  ppo_carracing_raw.yaml  ppo_carracing_skip_regularized_finetune.yaml  ppo_carracing_vae_finetune.yaml  ppo_doorkey_raw.yaml  ppo_doorkey_skip_regularized_finetune.yaml  ppo_doorkey_skip_regularized_frozen.yaml  ppo_doorkey_vae_finetune.yaml  ppo_doorkey_vae_frozen.yaml  ppo_raw.yaml  ppo_skip_vae_finetune.yaml  ppo_skip_vae_frozen.yaml  ppo_skip_vae_regularized_finetune.yaml  ppo_skip_vae_regularized_frozen.yaml  ppo_vae_finetune.yaml  ppo_vae_frozen.yaml  skip_vae_minigrid.yaml  skip_vae_regularized_carracing.yaml  skip_vae_regularized_doorkey.yaml  skip_vae_regularized_minigrid.yaml  vae_carracing.yaml  vae_doorkey.yaml  vae_minigrid.yaml
notebooks/: README.md  kaggle_carracing_visual_experiment.ipynb  kaggle_doorkey_stronger_experiment.ipynb  kaggle_strong_experiment.ipynb
src/skip_vae_rl/: __init__.py  aggregate_results.py  datasets.py  envs.py  train_rl.py  train_vae.py  utils.py  visualize_latent.py
src/skip_vae_rl/models/: __init__.py  vae.py
