[project]
name = "skip-vae-rl"
version = "0.1.0"
description = "Skip-connected variational representations for visual deep reinforcement learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29.1",
  "minigrid>=2.3.1",
  "matplotlib>=3.8.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "pyyaml>=6.0.0",
  "rich>=13.7.0",
  "scikit-learn>=1.3.0",
  "stable-baselines3>=2.3.0",
  "tensorboard>=2.15.0",
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "tqdm>=4.66.0",
  "wrapt>=1.16.0",
]

[project.optional-dependencies]
notebook = [
  "ipykernel>=6.29.0",
  "jupyter>=1.0.0",
  "seaborn>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skip_vae_rl"]

[tool.ruff]
line-length = 100
target-version = "py310"
